Добавляет изменение данных транспорта
