# docs/swagger.yaml
@@ -116,8 +116,26 @@ definitions:
     type: object
   models.GetTransportOutput:
     properties:
-      transport:
-        $ref: '#/definitions/models.Transport'
+      canBeRented:
+        type: boolean
+      color:
+        type: string
+      dayPrice:
+        type: number
+      description:
+        type: string
+      identifier:
+        type: string
+      latitude:
+        type: number
+      longitude:
+        type: number
+      minutePrice:
+        type: number
+      model:
+        type: string
+      transportType:
+        type: string
     type: object
   models.SignInInput:
     properties:
@@ -188,6 +206,45 @@ definitions:
     properties:
       token:
         type: string
+    type: object
+  models.UpdateTransportInput:
+    properties:
+      canBeRented:
+        type: boolean
+      color:
+        type: string
+      dayPrice:
+        minimum: 1
+        type: number
+      description:
+        type: string
+      identifier:
+        type: string
+      latitude:
+        maximum: 180
+        minimum: -180
+        type: number
+      longitude:
+        maximum: 180
+        minimum: -180
+        type: number
+      minutePrice:
+        minimum: 1
+        type: number
+      model:
+        type: string
+    required:
+    - canBeRented
+    - color
+    - identifier
+    - latitude
+    - longitude
+    - model
+    type: object
+  models.UpdateTransportOutput:
+    properties:
+      transport:
+        $ref: '#/definitions/models.Transport'
     type: object
 info:
   contact: {}
@@ -557,6 +614,46 @@ paths:
           schema:
             $ref: '#/definitions/handler.Error'
       summary: Get transport
+      tags:
+      - transport
+    put:
+      consumes:
+      - application/json
+      description: Update transport by id.
+      parameters:
+      - description: '-'
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: '-'
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateTransportInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UpdateTransportOutput'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Error'
+      security:
+      - BearerAuth: []
+      summary: Update transport
       tags:
       - transport
 securityDefinitions:
